Fixed Loader Logic for overflow html's hidden.

--- a/app/globals.css
+++ b/app/globals.css
@@ -46,4 +46,6 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: var(--font-primary);
+  overflow-x: hidden;
+  overflow-y: auto;
 }
